Added feature to add categories.

--- a/views/addpost.pug
+++ b/views/addpost.pug
@@ -20,7 +20,7 @@ block content
     .form-group
       label Body
       textarea.form-control(name='body', id='body')
-    .form-group
+    .form-group.bit-south
       label Main Image:
       input.form-control(name='mainImage', type='file')
     .form-group
