--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -112,3 +112,15 @@ textarea {
 .bit-south {
   margin-top: 20px;
 }
+
+ul.success li {
+  padding: 15px;
+  margin-top: 10px;
+  margin-bottom: 20px;
+  border: 1px solid transparent;
+  border-radius: 4px;
+  color: #3c763d;
+  background-color: #dff0d8;
+  border-color: #d6e9c6;
+  list-style: none;
+}
