--- a/views/index.pug
+++ b/views/index.pug
@@ -7,7 +7,10 @@ block content
         h1
           a(href='/posts/show/' + post._id)
            =post.title
-        p.meta Posted in #{post.category} by #{post.author} on #{moment(post.date).format("DD-MM-YY")}
+        p.meta Posted in #{''}
+          a(href='/categories/show/' + post.category) #{post.category} #{''}
+          |by #{post.author}
+          |on #{moment(post.date).format("DD-MM-YY")}
         img(src='/images/' + post.mainImage)
         !=truncateText(post.body,300)
         a.more(href='/post/show/' + post._id) Show More
